plugins {
    id 'java'
    id 'application'
}

apply plugin: 'idea'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

compileJava {
    options.compilerArgs += ["--enable-preview"]
}

application {
    mainClassName = "com.holeyko.Main"
    applicationDefaultJvmArgs += ["--enable-preview"]
}

compileJava.options.encoding = "UTF-8"
compileTestJava.options.encoding = "UTF-8"